--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "files.associations": {
+        "stm32f4xx_hal.h": "c",
+        "stm32f4xx_it.h": "c"
+    }
 }
