--- a/spartan6/dcm&pll/xc6slx9.ucf
+++ b/spartan6/dcm&pll/xc6slx9.ucf
@@ -18,3 +18,10 @@ NET ext(8) LOC = P57 | IOSTANDARD = LVTTL;
 NET ext(9) LOC = P59 | IOSTANDARD = LVTTL;
 NET ext(10) LOC = P62 | IOSTANDARD = LVTTL;
 NET ext(11) LOC = P67 | IOSTANDARD = LVTTL;
+# 时钟信号输出管脚
+NET clk_16 LOC = P140 | IOSTANDARD = LVTTL;
+NET clk_20 LOC = P138 | IOSTANDARD = LVTTL;
+NET clk_25 LOC = P134 | IOSTANDARD = LVTTL;
+NET clk_33 LOC = P132 | IOSTANDARD = LVTTL;
+NET clk_50 LOC = P127 | IOSTANDARD = LVTTL;
+NET clk_100 LOC = P124 | IOSTANDARD = LVTTL;
