--- a/spartan6/dcm&pll/xc6slx9.ucf
+++ b/spartan6/dcm&pll/xc6slx9.ucf
@@ -2,7 +2,7 @@
 NET "led1" LOC = P143 | IOSTANDARD = LVTTL;
 NET "led0" LOC = P142 | IOSTANDARD = LVTTL;
 # 按钮
-NET "clr" LOC = P26;
+#NET "clr" LOC = P26;
 # 时钟输入信号
 NET "clk_in" LOC = P55 | CLOCK_DEDICATED_ROUTE = FALSE;
 # ext引脚定义
@@ -12,16 +12,16 @@ NET ext(2) LOC = P35 | IOSTANDARD = LVTTL;
 NET ext(3) LOC = P41 | IOSTANDARD = LVTTL;
 NET ext(4) LOC = P44 | IOSTANDARD = LVTTL;
 NET ext(5) LOC = P46 | IOSTANDARD = LVTTL;
-NET ext(6) LOC = P48 | IOSTANDARD = LVTTL;
-NET ext(7) LOC = P51 | IOSTANDARD = LVTTL;
-NET ext(8) LOC = P57 | IOSTANDARD = LVTTL;
-NET ext(9) LOC = P59 | IOSTANDARD = LVTTL;
-NET ext(10) LOC = P62 | IOSTANDARD = LVTTL;
-NET ext(11) LOC = P67 | IOSTANDARD = LVTTL;
+#NET ext(6) LOC = P48 | IOSTANDARD = LVTTL;
+#NET ext(7) LOC = P51 | IOSTANDARD = LVTTL;
+#NET ext(8) LOC = P57 | IOSTANDARD = LVTTL;
+#NET ext(9) LOC = P59 | IOSTANDARD = LVTTL;
+#NET ext(10) LOC = P62 | IOSTANDARD = LVTTL;
+#NET ext(11) LOC = P67 | IOSTANDARD = LVTTL;
 # 时钟信号输出管脚
-NET clk_16 LOC = P140 | IOSTANDARD = LVTTL;
-NET clk_20 LOC = P138 | IOSTANDARD = LVTTL;
-NET clk_25 LOC = P134 | IOSTANDARD = LVTTL;
-NET clk_33 LOC = P132 | IOSTANDARD = LVTTL;
-NET clk_50 LOC = P127 | IOSTANDARD = LVTTL;
-NET clk_100 LOC = P124 | IOSTANDARD = LVTTL;
+#NET clk_16 LOC = P140 | IOSTANDARD = LVTTL;
+#NET clk_20 LOC = P138 | IOSTANDARD = LVTTL;
+#NET clk_25 LOC = P134 | IOSTANDARD = LVTTL;
+#NET clk_33 LOC = P132 | IOSTANDARD = LVTTL;
+#NET clk_50 LOC = P127 | IOSTANDARD = LVTTL;
+#NET clk_100 LOC = P124 | IOSTANDARD = LVTTL;
