在交换机代码中添加时钟代码

--- a/spartan6/dcm&pll/xc6slx9.ucf
+++ b/spartan6/dcm&pll/xc6slx9.ucf
@@ -25,3 +25,4 @@ NET ext(5) LOC = P46 | IOSTANDARD = LVTTL;
 #NET clk_33 LOC = P132 | IOSTANDARD = LVTTL;
 #NET clk_50 LOC = P127 | IOSTANDARD = LVTTL;
 #NET clk_100 LOC = P124 | IOSTANDARD = LVTTL;
+NET "ext<1>" CLOCK_DEDICATED_ROUTE = FALSE;
